<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pmw3901_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 package for PMW3901 optical flow sensor. This project includes portions of code from the following repositories:</description>
  <url type="repository">https://github.com/pimoroni/pmw3901-python/tree/main (MIT License)</url>
  <url type="repository">https://github.com/bitcraze/Bitcraze_PMW3901/tree/master (MIT License)</url>

  <author email="gms9095@kaist.ac.kr">Hohyeong Lee</author>
  <maintainer email="gms9095@kaist.ac.kr">Hohyeong Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>libgpiod-dev</build_depend>
  <exec_depend>libgpiod2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
